Fix horizontal scroll issue

--- a/src/index.css
+++ b/src/index.css
@@ -8,5 +8,8 @@ body{
     font-family: 'Livvic', sans-serif;
     background-color: #014E56;
     color:#FFFFFF;
-    
+}
+
+html{
+    overflow-x:hidden;
 }
